--- a/styles.css
+++ b/styles.css
@@ -9,27 +9,29 @@ h1 {
 
 .column {
   float: left;
-  width: 50%;
+  width: 25%;
 }
 
 /* Clear floats after the columns */
 .row:after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
+  padding-bottom: 20px;
 }
 
 h3 {
-  font-family: ubuntu mono;
+  font-family: Ubuntu Mono;
   font-weight: 400;
 }
 
 button {
   width: 110px;
   height: 50px;
+  border: 0;
   border-radius: 12px;
-  font-family: noto sans jp;
-  font-style: normal;
-  font-weight: 500;
+  font-family: Ubuntu Mono;
+  font-weight: 800;
   font-size: 18px;
+  background-color: #e0e0e0;
 }
