--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,17 @@ button {
   border-radius: 12px;
   font-family: Ubuntu Mono;
   font-weight: 800;
-  font-size: 18px;
+  font-size: 20px;
+}
+
+.row1 button {
   background-color: #e0e0e0;
+}
+
+.row1 .col2 button:hover {
+  background-color: #aeaeae;
+}
+
+.row1 .col2 button:focus {
+  background-color: #aeaeae;
 }
